--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Carlos Azaustre</p>
     <h3>Estudiantes</h3>
     <ul>
+        <li>Amanda Flores</li>
         <li>Nadia Nicoll</li>
         <li>Pepito</li>
         <li>Daniel Sentamans</li>
